@@ -1,7 +1,7 @@
 from distutils.core import setup
 
 setup(name='oktawave-cli',
-      version='0.7.3',
+      version='0.7.4',
       description='Command line interface to Oktawave',
       author='Oktawave Development Team (by Marek Siemdaj)',
       author_email='support@oktawave.com, marek.siemdaj@gmail.com',
