@@ -20,3 +20,4 @@
 - fixed map/unmap OVS to OCI
 - add handling OCS credentials
 - fix ORDB Backups display
+- fixed ORDB Templates
